--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,13 @@
 
 
     <application
-        android:name=".VkPostApplication"
+        android:name=".app.VkPostApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".acitivity.MainActivity"
             android:windowSoftInputMode="adjustResize|stateVisible">
 
             <intent-filter>
